--- a/Home_page.html
+++ b/Home_page.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/Top_meny.css">
+    <link rel="stylesheet" href="css/Search_movies_page.css">
 </head>
 <body>
 <header  class="Top_meny">
   <h1>
-   <img src="Images/BlumHouse_logo.png" alt="Blumhouse Production logo" width="25%" id="Meny_logo">
+   <img src="Images/BlumHouse_logo.png" alt="Blumhouse Production logo" id="Meny_logo" loading="lazy">
   </h1>
   <div class="Top_meny Meny_länkar">
     <div id="Home_page" class="Övre_länk_animation">
@@ -26,6 +27,7 @@
   </div>
  <div id="Undre_gradient_meny"></div>
 </header>
+<img src="Images/Spiderweb.webp" alt="Spindelväv" id="Spindelväv_bild" loading="lazy">
 
 
 </body>
